<resources>
    <string name="app_name">QuoteIt</string>
    <string name="button_addQuote">Add Quotation</string>
    <string name="hint_Quotation">Quotation</string>
    <string name="hint_quoteBook">Book from</string>
    <string name="menu_addQuote">Add</string>
    <string name="hint_pageNumber">Page Number</string>
    <string name="hint_fave">Favourite</string>
    <string name="favourite">Is this a favourite?</string>
    <string name="menu_cancelQuote">Cancel</string>
    <string name="menu_deleteQuote">Delete</string>
    <string name="hint_theme">Theme</string>
    <string name="like">Like</string>
    <string name="save_quote">Save Quote</string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_quote_image">Select quote image</string>
    <string name="display_quote_image">Quote Image</string>
    <string name="dialogTitle">Deleting a Quote</string>
    <string name="dialogMessage">Are you sure you want to delete this quote?</string>
    <string name="change_quote_image">Change quote image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_quotes_maps">Map of All Book Publishing Locations </string>

    <string-array name="themes">
        <item>Love</item>
        <item>Friendship</item>
        <item>Good vs Evil</item>
        <item>Family</item>
        <item>Identity</item>
        <item>Loyalty</item>
        <item>Betrayal</item>
        <item>Identity</item>
    </string-array>
    <string name="title_activity_map">MapActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="imagedesc">placeholder</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="passwordagain">Repeat Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="existing_account">Already Registered , Sign In !</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_first">Not Registered Yet , Sign Up !</string>
</resources>